# transcribbler

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  requirements.txt
.github/workflows/: backend.yml  client.yml  install.yml  validate-schemas.yml
backend/: README.md  pyproject.toml
backend/diarizer/: diarize.py  pyproject.toml
backend/tests/: test_align.py  test_attribution.py  test_bleed_gate.py  test_canon.py  test_capture_persist.py  test_capture_routing.py  test_confidence.py  test_frontmatter.py  test_ir_diarized.py  test_library.py  test_live_enroll.py  test_live_ir.py  test_meter.py  test_pack.py  test_pack_lifecycle.py  test_pipeline.py  test_proc.py  test_profiles.py  test_render.py  test_service.py  test_session_gallery.py  test_whisper_prompt.py  test_window_plan.py
backend/transcribbler/: __init__.py  align.py  attribution.py  audio.py  canon.py  capture.py  capture_persist.py  cli.py  diarizer_daemon.py  env.py  frontmatter.py  ir.py  library.py  meter.py  pack.py  paths.py  pipeline.py  probe.py  profiles.py  progress.py  render.py  session_gallery.py
backend/transcribbler/cores/: __init__.py  base.py  llama_canon.py  proc.py  pyannote.py  whisper_cpp.py
backend/transcribbler/service/: __init__.py  app.py  jobs.py  models.py  principal.py  serve.py
clients/cli/: Cargo.toml  build.rs
clients/cli/src/: client.rs  ir.rs  main.rs  render.rs
docs/: NEXT.md
docs/architecture/: 0000-adr-template.md  0001-composable-daemon-and-thin-clients.md  0002-hardware-topology.md  0003-reuse-engines-build-the-gap.md  0004-llama-cpp-native-backend.md  0005-diarization-flow.md  0006-canonical-ir-contract.md  0007-supervisor-agnostic-packaging.md  0008-build-order.md  0009-capture-cadence-and-operator-awareness.md  0009-capture-cadence.md  0010-operator-awareness-and-control.md  0011-idle-unload-keepalive-lease.md  0012-capture-store-and-forward.md  0013-retention-and-consent.md  0014-ir-epoch-session-identity.md  0015-pluggable-compute-backends.md  0016-speaker-naming-strategy.md  0017-rust-clients-python-service.md  0018-client-facing-wire.md  0019-job-scheduling.md  0020-remote-access-security.md  0021-internet-cloud-worker.md  0022-live-audio-ingest.md  0023-voiceprint-lifecycle.md  0024-live-speaker-identification.md  0025-deployment-topology-and-data-locality.md  0026-shared-speaker-identity-store.md  0027-robust-online-speaker-attribution.md  0028-session-resource-pack-and-regeneration.md  0029-pack-lifecycle-and-teaching.md  0030-installer-and-service-lifecycle.md  README.md
docs/design/: all-day-capture-north-star.md  diarization-flow.mmd  prior-art.md
docs/explainers/: how-voiceprints-work.md
docs/specs/: session-pack.md
packaging/: transcribbler.service
profiles/: cube-cuda.toml  desktop-vulkan.toml
schemas/: README.md  canonical-ir.schema.json  canonicalization-data.gbnf  canonicalization-data.schema.json  validate.py
schemas/examples/: batch-joint.ir.json  canonicalization-data.example.json  fallback-speakers.ir.json  session-modular.ir.json
schemas/examples/invalid/: bad-captured-at.json  bad-speaker-id.json  batch-missing-sha256.json  canon-data-empty-variants.json  glossary-empty-variants.json  turn-missing-speaker-id.json  unknown-field.json
