[project]
name = "transcribbler-backend"
version = "0.1.0"
description = "transcribbler compute backend — selectable GPU profiles, ASR/diarization cores, Canonical IR output"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18",
    "rfc3339-validator>=0.1.4",
]

[project.scripts]
transcribbler = "transcribbler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcribbler"]
