[project]
name = "transcribbler-backend"
version = "0.1.0"
description = "transcribbler compute backend — selectable GPU profiles, ASR/diarization cores, Canonical IR output"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18",
    "rfc3339-validator>=0.1.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.scripts]
transcribbler = "transcribbler.cli:main"
transcribbler-serve = "transcribbler.service.serve:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcribbler"]
