[package]
name = "transcribbler"
version = "0.1.0"
edition = "2021"
description = "transcribbler CLI client — talks the ADR-0018 wire over a Unix socket or TCP"
license = "Apache-2.0"

[[bin]]
name = "transcribbler"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
regress = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[build-dependencies]
typify = "0.7"
schemars = "0.8"
serde_json = "1"
prettyplease = "0.2"
syn = "2"
